# rubric

./: CLAUDE.md  README.md  pyproject.toml
examples/: basic_usage.py
src/rubric/: __init__.py  rubric.py  types.py  utils.py
src/rubric/autograders/: __init__.py  base.py  double_pass_per_criterion_one_shot_grader.py  per_criterion_grader.py  per_criterion_one_shot_grader.py  rubric_as_judge_grader.py  schemas.py
tests/autograders/: test_double_pass_per_criterion_one_shot_grader.py  test_length_penalty.py  test_per_criterion_grader_class.py  test_per_criterion_one_shot_grader_class.py  test_rubric_as_judge_grader.py  test_thinking_output_grading.py
tests/rubric/: test_rubric.py
